--- a/.gitignore
+++ b/.gitignore
@@ -43,4 +43,4 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
-lib\Raspberry_Pi\serviceAccountKey.json
+/lib/Raspberry_Pi/serviceAccountKey.json
