--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,8 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
-/lib/Raspberry_Pi/serviceAccountKey.json
-
+#ignore firebase_options.dart
 /lib/firebase_options.dart
+
+#ignore google-services.json
+/android/app/google-services.json
